Fix nightmode input text visibilit

--- a/app.css
+++ b/app.css
@@ -765,7 +765,7 @@ div.settings .changelog ul{
   color: #fff;
 }
 
-.nightmode select {
+.nightmode input {
   color: #333;
 }
 
